# pike-openevolve

./: .gitignore  README.md  pyproject.toml
examples/kernelbench/: config.yaml  evaluator.py  initial_program.py  run.py
examples/kernelbench/templates/: full_rewrite_user.txt
openevolve/: config.py  controller.py  database.py  process_parallel.py
openevolve/llm/: ensemble.py  openai.py
openevolve/prompt/: sampler.py  templates.py
